Fix buttons overflowing on large screens

--- a/public/index.css
+++ b/public/index.css
@@ -29,7 +29,7 @@ body {
 
 #buttons {
 	position: absolute;
-	right: 16.2rem;
+	right: 20%;
 	top: .2rem;
 }
 
